Bug fix: food card headers overflow

--- a/css/menu.css
+++ b/css/menu.css
@@ -55,7 +55,8 @@ img.menu {
     }
 }
 
-@media only screen and (min-width: 1280px) {
+/* @media only screen and (min-width: 1280px) { */
+@media only screen and (min-width: 1510px) {
     article.dish {
         display: inline-block;
         width: 45%;
